--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ MarkupSafe==1.1.0
 mysqlclient==1.3.14
 pkg-resources==0.0.0
 python-dotenv==0.10.1
-SQLAlchemy==1.2.15
+SQLAlchemy>=1.3.0
 Werkzeug==0.14.1
 WTForms==2.2.1
