--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Click==7.0
-Flask==1.0.2
-Flask-WTF==0.14.2
-itsdangerous==1.1.0
-Jinja2>=2.10.1
-MarkupSafe==1.1.0
-mysqlclient==1.3.14
-python-dotenv==0.10.1
-SQLAlchemy>=1.3.0
-werkzeug>=0.15.3
-WTForms==2.2.1
+click==8.0.0
+Flask==2.0.0
+Flask-WTF==0.14.3
+greenlet==1.1.0
+itsdangerous==2.0.0
+Jinja2==3.0.0
+MarkupSafe==2.0.0
+mysqlclient==2.0.3
+python-dotenv==0.17.1
+SQLAlchemy==1.4.15
+Werkzeug==2.0.0
+WTForms==2.3.3
