Change docker-compose configuration: - Add Mysql env vars - python Dockerfile

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-#!/usr/bin/env bash
-MYSQL_HOST=mysql
+MYSQL_USER=passlessauth
+MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=
+MYSQL_SERVER=mysql
 MYSQL_DATABASE=passlessauth
-MYSQL_ROOT_USER=root
-MYSQL_ROOT_PASSWORD=toor
+
 MYSQL_EXPOSE_PORT=3306
 PYTHON_EXPOSE_PORT=5000
